# xtal2txt

./: .bumpversion.cfg  .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  Ba(PdS2)2.cif  CITATION.cff  CifToString.py  Cr5S8.cif  LICENSE  MANIFEST.in  NOTICE.txt  README.md  ciftostring.py  ciftostringfunction.py  ciftotuplecartesian.py  ciftotuplefractional.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  test_ciftostring.py
.github/: CODE_OF_CONDUCT.md
.github/workflows/: docs.yml  pre-commit.yml  tests.yml
api/: index.html
docs/: api.md  index.md  installation.md  textrep.md  usage.md
docs/source/: conf.py  index.rst  installation.rst  textrep.rst  usage.rst
getting_started/: index.html
notebooks/: development.ipynb  example_transformations.ipynb
search/: search_index.json
src/xtal2txt/: __init__.py  analysis.py  ciftostring.py  core.py  decoder.py  local_env.py  tokenizer.py  transforms.py  utils.py  version.py
src/xtal2txt/vocabs/: 1.json  cif_vocab.json  cif_vocab.txt  cif_vocab_rt.json  cif_vocab_rt.txt  composition_vocab_rt.txt  crystal_llm_vocab.json  crystal_llm_vocab_rt.json  robocrys_vocab.json  slice_vocab_rt.txt  smiles_vocab.json  smiles_vocab.txt  smiles_vocab_rt.json  smiles_vocab_rt.txt
tests/: __init__.py  conftest.py  test_ciftostring.py  test_get_atom_params.py  test_local_env.py  test_textrep.py  test_version.py
tests/decoder/: test_llm_decoder.py  test_string_decoder_p1.py  test_string_decoder_sym.py  test_wyckoff.py
tests/tokenizer/: test_cif_tokenizer.py  test_composition_tokenizer.py  test_crystal_llm_tokenizer.py  test_llm_decoder.py  test_robocrys_tokenizer.py  test_rt_tokenier.py  test_slice_tokenizer.py  test_smiles_tokenizer.py  test_wyckoff.py
usage/: index.html
