##########################
# Setup.py Configuration #
##########################
[metadata]
name = xtal2txt
version = 0.0.1-dev
description = Package to encode and decode crystal structures into text representrations
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/lamalab-org/xtal2txt
download_url = https://github.com/lamalab-org/xtal2txt/releases
project_urls =
    Bug Tracker = https://github.com/lamalab-org/xtal2txt/issues
    Source Code = https://github.com/lamalab-org/xtal2txt

# Author information
author = Nawaf Alampara, Reza Aliakbari, Santiago Miret, Kevin Maik Jablonka
author_email = mail@kjablonka.com
maintainer = Kevin Maik Jablonka
maintainer_email = mail@kjablonka.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords =
    llm 
    materials 
    chemistry

[options]
install_requires =
    transformers
    slices
    robocrys
    matminer
    pyxtal
    keras

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    mkdocs
    mkdocs-autorefs
    mkdocs-material
    mkdocstrings
    mkdocstrings-python


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = xtal2txt
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/xtal2txt
    .tox/*/lib/python*/site-packages/xtal2txt

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__
